# FEM

./: .gitignore  .h  CMakeLists.txt  FEM.cpp  FEM.h  Project1.sln  Project1.vcxproj  Project1.vcxproj.filters  README.md  boundary_0.txt  chmdu.cpp  delone.cpp  elements.txt  gnuplot.cpp  main.cpp  matrix.cpp  matrix.h  point.cpp  point.h  polygon.cpp  polygon.h  triangulation.cpp  triangulation.h  utils.cpp  utils.h
src/: FEM.cpp  delone.cpp  elt.cpp  elt.h  main.cpp  matrix.h  polygon.cpp  polygon.h  testing.cpp  testing.h  triangulation.h  utils.cpp  utils.h
src/text/: boundary_0.txt  boundary_1.txt  nodes.txt  res.txt  stiffness.txt
text/: Q.txt  S.txt  b.txt  matrix.txt
